--- a/views/project_detail.ejs
+++ b/views/project_detail.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            <%= locals.title %>
+            <%= project_info.name %>
         </title>
         <script src="https://kit.fontawesome.com/d76b9d75bf.js" crossorigin="anonymous"></script>
         <!-- our css must be below other styles  -->
