--- a/views/create_project.ejs
+++ b/views/create_project.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            <%= locals.title %>
+            Create Project
         </title>
         <script src="https://kit.fontawesome.com/d76b9d75bf.js" crossorigin="anonymous"></script>
         <!-- our css must be below other styles  -->
