--- a/views/create_issue.ejs
+++ b/views/create_issue.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            <%= locals.title %>
+            create Issue
         </title>
         <script src="https://kit.fontawesome.com/d76b9d75bf.js" crossorigin="anonymous"></script>
         <!-- our css must be below other styles  -->
